--- a/emperor.html
+++ b/emperor.html
@@ -5,6 +5,14 @@
 This is Anzoix.<p>Welcome</p>
 <p>I am a Computer Engineer.</a></p>
 
+<br>
+<br>
+<br>
+<a href="anzoix.me">[Home]</a>
+<a href="https://open.spotify.com/user/4zw0dwjjjhl4uybjl1iqeadn1">[Spotify]</a>
+<a href="https://t.me/Anzoix">[Telegram]</a>
+<br>
+
 
 <p>Cheers!</p>
 <span id="a">Anzoix@computer</span>:<span id="b">~</span><span id="c">/Anzoix/About_Me</span>$ 
