--- a/emperor.html
+++ b/emperor.html
@@ -8,9 +8,8 @@ This is Anzoix.<p>Welcome</p>
 <br>
 <br>
 <br>
-<a href="anzoix.me">[Home]</a>
-<a href="https://open.spotify.com/user/4zw0dwjjjhl4uybjl1iqeadn1">[Spotify]</a>
-<a href="https://t.me/Anzoix">[Telegram]</a>
+<a href="https://github.com/Anzoix">[GitHub]</a><a href="https://open.spotify.com/user/4zw0dwjjjhl4uybjl1iqeadn1">[Spotify]</a><a href="https://t.me/Anzoix">[Telegram]</a>
+
 <br>
 
 
